--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,18 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# cmake and cache and temp Files/.vs/cmake.db
+/.vs/oop2_ex04-Adi_Yakoby_Ron_Elian/v17/.wsuo
+/out/build/x64-Debug/CMakeFiles/CMakeOutput.log
+/out/build/x64-Debug/CMakeFiles/ShowIncludes/main.obj
+*.ipch
+*.suo
+*.User
+*.user
+*.sbr
+*.ncb
+*.vs
+*.wsuo
+*.MAIN.ipch
+*/MAIN.ipch
