added comp and player stats, need to finish

--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -3,4 +3,6 @@ configure_file ("medium.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("hard.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("screen.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("exit.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Asul-Bold.ttf" ${CMAKE_BINARY_DIR} COPYONLY)
+
 
